Remove old content and add new paragraph

--- a/index.html
+++ b/index.html
@@ -1,32 +1,1 @@
-    <a href="www.google.com">google</a>
-    <br>
-    <a href="/hello/hello.html">go to hello</a>
-
-    <br>
-    <!-- Relative URL Photo ne add karvu  -->
-    <img src="/roch.jpg" alt="roach" height="150" /> 
-    <img src="/harry.jpg" alt="harry" />
-    <!-- Absolute URL -->
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZ8ckUkLT8RyltKQ347BQi1G7FOcNUWVw7_Q&s"  width="100 alt="hp" />
-
-    <br>
-
-    <b>BOLD</b>
-    <u>UNDERLINE</u>
-    <i>ITALIC</i> 
-
-    <br><br>
-    <mark>MARKED TEXT</mark>
-    <br>
-
-    <!-- horizontal ruler to seprate -->
-    <hr>
-
-    <big>This tag shows big text</big>
-    <small>This tag shows small text</small>
-
-    <br><br>
-    <sub>subscript</sub>
-    <sup>superscript</sup>
-    <hr>
-    <p>H<sub>2</sub>O</p>
+    <p>hell</p>
